--- a/src/components/Radio/Radio.module.css
+++ b/src/components/Radio/Radio.module.css
@@ -42,7 +42,7 @@
 	}
 }
 
-[data-rs-keyboard] .input:focus + .decorator {
+.input:focus-visible + .decorator {
 	box-shadow: var(--rs-focus-shadow);
 }
 
